--- a/EN/HtmlSamples/combo/bind-combo-with-ko/demo.html
+++ b/EN/HtmlSamples/combo/bind-combo-with-ko/demo.html
@@ -16,7 +16,7 @@
     </div>
 
     <div class="horizontal-container">
-        <input data-bind="value: newActor" type="text"></input>
+        <input data-bind="value: newActor" type="text" class="input-add-actor"></input>
         <input data-bind="click: addActor" type="button" value="Add"></input>
     </div>
 
