--- a/EN/HtmlSamples/combo/keyboard-navigation/demo.html
+++ b/EN/HtmlSamples/combo/keyboard-navigation/demo.html
@@ -8,4 +8,16 @@
 <link href="http://staging.igniteui.local/15-1/IgniteUI/css/structure/infragistics.css" rel="stylesheet"></link>
 
 <h4 class="combo-label">World's 10 Highest Mountain Peaks</h4>
-    <div id="combo"></div>
+
+    <table>
+        <tr>
+            <td>
+                <div id="combo"></div>
+            </td>
+            <td>
+                <input id="tryAgaintBtn" value="Try it again!">
+            </input></td>
+        </tr>
+    </table>
+
+    <a id="tooltip" title="Message"></a>
