--- a/JA/HtmlSamples/combo/bind-combo-with-ko/demo.html
+++ b/JA/HtmlSamples/combo/bind-combo-with-ko/demo.html
@@ -17,7 +17,7 @@
     </div>
 
     <div class="horizontal-container">
-        <input data-bind="value: newActor" type="text"></input>
+        <input data-bind="value: newActor" type="text" class="input-add-actor"></input>
         <input data-bind="click: addActor" type="button" value="追加"></input>
     </div>
 
