--- a/JA/HtmlSamples/combo/keyboard-navigation/demo.html
+++ b/JA/HtmlSamples/combo/keyboard-navigation/demo.html
@@ -9,4 +9,16 @@
 <script src="http://staging.igniteui.local/15-1/IgniteUI/js/i18n/infragistics-ja.js"></script>
 
 <h4 class="combo-label">世界の高い山トップ 10</h4>
-    <div id="combo"></div>
+
+    <table>
+        <tr>
+            <td>
+                <div id="combo"></div>
+            </td>
+            <td>
+                <input id="tryAgaintBtn" value="Try it again!">
+            </input></td>
+        </tr>
+    </table>
+
+    <a id="tooltip" title="Message"></a>
