--- a/JA/HtmlSamples/data-chart/bind-data-chart-with-ko/demo.html
+++ b/JA/HtmlSamples/data-chart/bind-data-chart-with-ko/demo.html
@@ -37,7 +37,10 @@
 				<div id="combo-month" data-bind="igCombo: {
 					selectedItems: currMonth,
 					dataSource: months,
-					width: 100
+					mode: 'dropdown',
+					enableClearButton: false,
+					width: 100,
+					height: 21
 				}"></div>
 			</div>
 			<div class="editor-container">
