--- a/EN/HtmlSamples/data-chart/category-highlight-layer/demo.html
+++ b/EN/HtmlSamples/data-chart/category-highlight-layer/demo.html
@@ -23,6 +23,7 @@
                     <option value="green">Green</option>
                     <option value="yellow">Yellow</option>
                     <option value="black">Black</option>
+                    <option value="orange" selected="selected">Orange</option>
                 </select>
             </div>
             <div class="optionContainer">
@@ -33,7 +34,7 @@
                     <option value="blue">Blue</option>
                     <option value="green">Green</option>
                     <option value="yellow">Yellow</option>
-                    <option value="black">Black</option>
+                    <option value="black" selected="selected">Black</option>
                 </select>
             </div>
             
@@ -48,7 +49,7 @@
                 Opacity
                 <br />
                 <div id="opacitySlider" class="sliderBounds"></div>
-                <label id="opacityLabel">0.6</label>
+                <label id="opacityLabel">0.3</label>
             </div>
             
             <br />
