--- a/JA/HtmlSamples/data-chart/category-highlight-layer/demo.html
+++ b/JA/HtmlSamples/data-chart/category-highlight-layer/demo.html
@@ -24,6 +24,7 @@
                     <option value="green">Green</option>
                     <option value="yellow">Yellow</option>
                     <option value="black">Black</option>
+                    <option value="orange" selected="selected">Orange</option>
                 </select>
             </div>
             <div class="optionContainer">
@@ -34,7 +35,7 @@
                     <option value="blue">Blue</option>
                     <option value="green">Green</option>
                     <option value="yellow">Yellow</option>
-                    <option value="black">Black</option>
+                    <option value="black" selected="selected">Black</option>
                 </select>
             </div>
             
@@ -49,7 +50,7 @@
                 不透明度
                 <br />
                 <div id="opacitySlider" class="sliderBounds"></div>
-                <label id="opacityLabel">0.6</label>
+                <label id="opacityLabel">0.3</label>
             </div>
             
             <br />
