--- a/JA/HtmlSamples/grid/filtering/demo.html
+++ b/JA/HtmlSamples/grid/filtering/demo.html
@@ -8,4 +8,10 @@
 <link href="http://staging.igniteui.local/15-1/IgniteUI/css/structure/infragistics.css" rel="stylesheet"></link>
 <script src="http://staging.igniteui.local/15-1/IgniteUI/js/i18n/infragistics-ja.js"></script>
 
-<table id="grid"></table>
+<h3 id="gridSimpleFilteringLabel">簡易フィルターのグリッド</h3>
+     
+    <table id="gridSimpleFiltering"></table>
+     <br />
+    <h3 id="gridAdvancedFilteringLabel">詳細フィルターのグリッド</h3>
+     
+    <table id="gridAdvancedFiltering"></table>
